Fix spacing on horizongal line

--- a/index.css
+++ b/index.css
@@ -219,8 +219,8 @@ hr {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  margin: 5.5rem 1.5rem;
-  padding-bottom: 7.5rem;
+  margin: 5.5rem 1.5rem 1.8rem 1.5rem;
+  padding-bottom: 9rem;
   padding-top: 3rem;
   background-image: url('./images/illustration-about-me-mobile.png');
   background-repeat: no-repeat;
@@ -241,7 +241,7 @@ hr {
   font-family: 'Inter', sans-serif;
   font-weight: 300;
   font-size: 1rem;
-  margin: 1.5rem 0;
+  margin: 1.5rem 0 2.5rem 0;
 }
 
 .about-btn {
